# AmeliaTF

./: .gitignore  AmeliaDataTools.code-workspace  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
amelia_tf/: eval.py  train.py
amelia_tf/data/: datamodule.py  datamodule_from_list.py
amelia_tf/data/components/: amelia_dataset.py  base_dataset.py
amelia_tf/models/: trajpred.py
amelia_tf/models/components/: amelia.py  amelia_traj.py  context.py  cross_attention.py  self_attention.py
amelia_tf/utils/: __init__.py  data_utils.py  global_masks.py  instantiators.py  logging_utils.py  losses.py  metrics.py  pylogger.py  rich_utils.py  transform_utils.py  utils.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  lr_monitor.yaml
configs/data/: default.yaml  kbos.yaml  kdca.yaml  kewr.yaml  kjfk.yaml  klax.yaml  kmdw.yaml  kmsy.yaml  ksea.yaml  ksfo.yaml  panc.yaml  seen-1.yaml  seen-2.yaml  seen-3.yaml  seen-4.yaml  seen-7.yaml  seen-all.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: amelia.yaml  amelia_traj.yaml  joint.yaml  joint_traj.yaml  marginal.yaml  marginal_traj.yaml
configs/paths/: default.yaml  version7.yaml  version8.yaml
configs/trainer/: cpu.yaml  default.yaml  gpu.yaml  mps.yaml
datasets/: amelia  error_files.py
src/data/: datamodule.py
src/models/: trajpred.py
src/utils/: data_utils.py  logging_utils.py  losses.py  metrics.py  transform_utils.py  utils.py
wandb/: settings
(+8 files in other folders)
